15197
Using

Scala compiler version 2.8.0.r21376-b20100408020204 -- Copyright
2002-2010, LAMP/EPFL

I get an error when importing a private object member:
```scala
package z {
trait L {val x = 1}
object O {private val x = 2}

class C extends L {
 def f = {
 import O._
 println(x)
 }
}
}
```
test.scala:8: error: reference to x is ambiguous;
it is both defined in trait L and imported subsequently by 
import O._
 println(x)
         ^
one error found

Note if I move the import O._ outside the function f, everything compiles
